<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialogListener"
            type="com.myAllVideoBrowser.ui.component.adapter.DownloadDialogListener" />

        <variable
            name="dialog"
            type="com.google.android.material.bottomsheet.BottomSheetDialog" />


        <variable
            name="mainViewModel"
            type="com.myAllVideoBrowser.ui.main.home.MainViewModel" />

        <variable
            name="videInfo"
            type="com.myAllVideoBrowser.data.local.room.entity.VideoInfo" />

        <variable
            name="title"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/video_title_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/video_title_edit"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/video_title_rename_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/video_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/video_title_rename_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/video_menu_rename"
            app:layout_constraintBottom_toBottomOf="@+id/video_title_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/video_title_layout"
            app:layout_constraintVertical_bias="0.0" />

        <GridView
            android:id="@+id/candidatesList"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:horizontalSpacing="8dp"
            android:numColumns="2"
            android:verticalSpacing="8dp"
            android:contentDescription="@string/player_resolution"
            app:layout_constraintTop_toBottomOf="@id/video_title_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> dialogListener.onCancel(dialog)}"
            android:text="@string/dialog_download_cancel"
            android:textAlignment="viewStart"
            app:icon="@drawable/ic_cancel_24dp"
            app:layout_constraintTop_toBottomOf="@id/candidatesList" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_preview"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> dialogListener.onPreviewVideo(videInfo, dialog, mainViewModel.selectedFormatTitle.first, false)}"
            android:text="@string/dialog_preview_video"
            android:textAlignment="viewStart"
            app:icon="@drawable/ic_video_24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_preview_force"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> dialogListener.onPreviewVideo(videInfo, dialog, mainViewModel.selectedFormatTitle.first, true)}"
            android:text="@string/dialog_preview_video_force"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:icon="@drawable/downloading_24px"
            app:layout_constraintTop_toBottomOf="@id/tv_preview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_download"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> dialogListener.onDownloadVideo(videInfo, dialog, mainViewModel.selectedFormatTitle.first, mainViewModel.selectedFormatTitle.second)}"
            android:text="@string/dialog_download_video"
            app:icon="@drawable/ic_download_24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_preview_force" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>