...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurfaceContainer"
                app:elevation="0dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentInsetStart="0dp"
                    app:layout_scrollFlags="scroll|enterAlways|snap">

                    <androidx.constraintlayout.widget.ConstraintLayout
...
                                android:onClick="@{() -> browserMenuListener.onBrowserForwardClicked()}"
                                app:icon="@drawable/arrow_forward24px"
                                app:iconTint="?attr/colorOnSurface" />
                        </LinearLayout>

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/et_search"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginHorizontal="8dp"
                            android:background="@drawable/round_corner"
                            android:focusable="@{viewModel.isTabInputFocused}"
                            android:focusableInTouchMode="@{viewModel.isTabInputFocused}"
...
