...
            android:minWidth="80dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:importantForAccessibility="no">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:textColor="?attr/colorOnSurface"
                tools:text="1080P" />
...
