...
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            app:currentItem="@{viewModel.currentItem}"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:offScreenPageLimit="@{viewModel.offScreenPageLimit}" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
...
